Sync Community PR #2110 (Fix broken indentation in api workflows projects doc)

--- a/versions/v2.10/modules/en/pages/api/workflows/projects.adoc
+++ b/versions/v2.10/modules/en/pages/api/workflows/projects.adoc
@@ -1,6 +1,6 @@
 = Projects
 :page-languages: [en, zh]
-:revdate: 2026-01-08
+:revdate: 2026-01-16
 :page-revdate: {revdate}
 
 == Creating a Project
@@ -39,9 +39,8 @@ kubectl create -f - <<EOF
 apiVersion: management.cattle.io/v3
 kind: Project
 metadata:
-  annotations:
-  field.cattle.io/creatorId:
-    user-id
+  annotations: 
+    field.cattle.io/creatorId: user-id
   generateName: p-
   namespace: c-m-abcde
 spec:
