--- a/versions/v2.8/modules/zh/pages/api/workflows/projects.adoc
+++ b/versions/v2.8/modules/zh/pages/api/workflows/projects.adoc
@@ -1,6 +1,6 @@
 = 项目
 :page-languages: [en, zh]
-:revdate: 2025-04-04
+:revdate: 2026-01-16
 :page-revdate: {revdate}
 
 == 创建项目
@@ -35,9 +35,8 @@ kubectl create -f - <<EOF
 apiVersion: management.cattle.io/v3
 kind: Project
 metadata:
-  annotations:
-  field.cattle.io/creatorId:
-    user-id
+  annotations: 
+    field.cattle.io/creatorId: user-id
   generateName: p-
   namespace: c-m-abcde
 spec:
