Sync Community PR #2119 (Fix deprecated deprecation policy link in FAQ)

--- a/versions/v2.11/modules/en/pages/faq/deprecated-features.adoc
+++ b/versions/v2.11/modules/en/pages/faq/deprecated-features.adoc
@@ -1,11 +1,11 @@
 = Deprecated Features in {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2025-12-17
+:revdate: 2026-01-16
 :page-revdate: {revdate}
 
 == What is Rancher's deprecation policy?
 
-We have published our official deprecation policy in the support https://rancher.com/support-maintenance-terms[terms of service].
+The official deprecation policy is documented in the https://www.suse.com/support/rancher-prime/#Rancher-Prime-Deprecation-Policy[Rancher Prime Deprecation Policy].
 
 == Where can I find out which features have been deprecated in Rancher?
 
