--- a/versions/v2.8/modules/zh/pages/faq/deprecated-features.adoc
+++ b/versions/v2.8/modules/zh/pages/faq/deprecated-features.adoc
@@ -1,11 +1,11 @@
 = {rancher-product-name} 中已弃用的功能
 :page-languages: [en, zh]
-:revdate: 2025-04-24
+:revdate: 2026-01-16
 :page-revdate: {revdate}
 
 == Rancher 的弃用策略是什么？
 
-我们已经在支持的link:https://rancher.com/support-maintenance-terms[服务条款]中发布了官方的弃用策略。
+The official deprecation policy is documented in the https://www.suse.com/support/rancher-prime/#Rancher-Prime-Deprecation-Policy[Rancher Prime Deprecation Policy].
 
 == 在哪里可以了解 Rancher 中已弃用哪些功能？
 
