--- a/versions/v2.13/modules/en/nav.adoc
+++ b/versions/v2.13/modules/en/nav.adoc
@@ -1,5 +1,6 @@
 * xref:release-notes.adoc[Release Notes]
 ** xref:release-notes/v2.13.1.adoc[]
+** xref:release-notes/v2.13.2.adoc[]
 * About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
 ** xref:about-rancher/prime.adoc[]
