--- a/versions/v2.10/modules/zh/nav.adoc
+++ b/versions/v2.10/modules/zh/nav.adoc
@@ -1,4 +1,5 @@
-* xref:release-notes.adoc[]
+* xref:release-notes.adoc[Release Notes]
+** xref:release-notes/v2.10.11.adoc[]
 * About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
 ** xref:about-rancher/prime.adoc[]
