--- a/versions/v2.13/modules/zh/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/zh/pages/release-notes/v2.13.2.adoc
@@ -4,6 +4,29 @@ ifeval::["{build-type}" != "srfa"]
 endif::[]
 :revdate: 2026-01-19
 :page-revdate: {revdate}
+ifeval::["{build-type}" == "community"]
+:rn-component-version: v2.13
+:rn-istio-istio: https://ranchermanager.docs.rancher.com/{rn-component-version}/integrations-in-rancher/istio
+:rn-installation-requirements: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/installation-requirements
+:rn-aggregation-layer-is-required: https://ranchermanager.docs.rancher.com/{rn-component-version}/api/extension-apiserver#aggregation-layer-is-required
+:rn-disk-space: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/advanced-user-guides/ui-server-side-pagination#disk-space
+:rn-viewing-api-audit-logs: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/advanced-user-guides/enable-api-audit-log#viewing-api-audit-logs:~:text=Description-,AUDIT_LOG_ENABLED,-false%20%2D%20Disables%20the
+:rn-enable-api-audit-log: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/advanced-user-guides/enable-api-audit-log
+:rn-back-up-rancher: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher
+:rn-install-rancher: https://docs.ranchermanager.rancher.io/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher
+:rn-private-registry: https://docs.k3s.io/installation/private-registry
+endif::[]
+ifeval::["{build-type}" != "community"]
+:rn-istio-istio: xref:observability/istio/istio.adoc
+:rn-installation-requirements: xref:installation-and-upgrade/requirements/requirements.adoc
+:rn-aggregation-layer-is-required: xref:api/extension-apiserver.adoc#_aggregation_layer_is_required
+:rn-disk-space: xref:rancher-admin/global-configuration/ui-server-side-pagination.adoc#_disk_space
+:rn-viewing-api-audit-logs: xref:observability/logging/enable-api-audit-log.adoc#_api_audit_log_options
+:rn-enable-api-audit-log: xref:observability/logging/enable-api-audit-log.adoc
+:rn-back-up-rancher: xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
+:rn-install-rancher: xref:installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+:rn-private-registry: https://documentation.suse.com/cloudnative/k3s/latest/en/installation/private-registry.html
+endif::[]
 
 [IMPORTANT]
 ====
@@ -27,12 +50,7 @@ For more information see https://github.com/rancher/rancher/issues/48655[#48655]
 
 [IMPORTANT]
 ====
-ifeval::["{build-type}" == "community"]
-https://ranchermanager.docs.rancher.com/v2.13/integrations-in-rancher/istio[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
-endif::[]
-ifeval::["{build-type}" != "community"]
-xref:observability/istio/istio.adoc[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
-endif::[]
+{rn-istio-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 ====
 
 ifeval::["{build-type}" != "community"]
@@ -107,12 +125,7 @@ endif::[]
 
 == Install/Upgrade Notes
 
-ifeval::["{build-type}" == "community"]
-If you're installing Rancher for the first time, your environment must fulfill the https://ranchermanager.docs.rancher.com/v2.13/getting-started/installation-and-upgrade/installation-requirements[installation requirements].
-endif::[]
-ifeval::["{build-type}" != "community"]
-If you're installing Rancher for the first time, your environment must fulfill the xref:installation-and-upgrade/requirements/requirements.adoc[installation requirements].
-endif::[]
+If you're installing Rancher for the first time, your environment must fulfill the {rn-installation-requirements}[installation requirements].
 
 ifeval::["{build-type}" != "community"]
 [IMPORTANT]
@@ -131,12 +144,7 @@ endif::[]
 ====
 Rancher now requires the cluster it runs on to have the https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/apiserver-aggregation/[Kubernetes API Aggregation Layer] enabled. This is because Rancher extends Kubernetes with additional APIs by registering its own extension API server. Please note that all versions of Kubernetes supported in this Rancher versions K8s distributions (RKE2/K3s) will have the aggregation layer configured and enabled by default. 
 
-ifeval::["{build-type}" == "community"]
-Refer to the https://ranchermanager.docs.rancher.com/v2.13/api/extension-apiserver#aggregation-layer-is-required[Extension API Server documentation] and https://github.com/rancher/rancher/issues/50400[#50400] for more information.
-endif::[]
-ifeval::["{build-type}" != "community"]
-Refer to the xref:api/extension-apiserver.adoc#_aggregation_layer_is_required[Extension API Server documentation] and https://github.com/rancher/rancher/issues/50400[#50400] for more information.
-endif::[]
+Refer to the {rn-aggregation-layer-is-required}[Extension API Server documentation] and https://github.com/rancher/rancher/issues/50400[#50400] for more information.
 ====
 
 [IMPORTANT]
@@ -150,22 +158,12 @@ Rancher now has a pre-upgrade validation check for RKE1 resources which fails an
 ====
 It is crucial that you review the available disk space on your nodes and plan accordingly before upgrading to Rancher v2.12.0 and later to avoid potential disk pressure and pod eviction issues.
 
-ifeval::["{build-type}" == "community"]
-For additional information refer to the https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/advanced-user-guides/ui-server-side-pagination#disk-space[UI Server Side Pagination - Disk Space documentation].
-endif::[]
-ifeval::["{build-type}" != "community"]
-For additional information refer to the xref:rancher-admin/global-configuration/ui-server-side-pagination.adoc#_disk_space[UI Server Side Pagination - Disk Space documentation].
-endif::[]
+For additional information refer to the {rn-disk-space}[UI Server Side Pagination - Disk Space documentation].
 ====
 
 [IMPORTANT]
 ====
-ifeval::["{build-type}" == "community"]
-Rancher now has an enablement option called https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/advanced-user-guides/enable-api-audit-log#viewing-api-audit-logs:~:text=Description-,AUDIT_LOG_ENABLED,-false%20%2D%20Disables%20the[`AUDIT_LOG_ENABLED`] for API Audit Logs for a Rancher installation. In Rancher versions 2.11.x and earlier, only the `AUDIT_LEVEL` could be set and the default log level (`0`) would disable the audit log. In Rancher versions 2.12.x and later, the default log level (`0`) now only contains the log request and response metadata, and can be set when configuring `AUDIT_LOG_ENABLED`. If installing or upgrading via Helm you can enable the API Audit Logs and specify the log level by applying the following setting to your Helm command: `--set auditLog.enabled=true --set auditLog.level=0`. See the https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/advanced-user-guides/enable-api-audit-log[Enabling the API Audit Log to Record System Events] documentation and https://github.com/rancher/rancher/issues/48941[#48941].
-endif::[]
-ifeval::["{build-type}" != "community"]
-Rancher now has an enablement option called xref:observability/logging/enable-api-audit-log.adoc#_api_audit_log_options[`AUDIT_LOG_ENABLED`] for API Audit Logs for a Rancher installation. In Rancher versions 2.11.x and earlier, only the `AUDIT_LEVEL` could be set and the default log level (`0`) would disable the audit log. In Rancher versions 2.12.x and later, the default log level (`0`) now only contains the log request and response metadata, and can be set when configuring `AUDIT_LOG_ENABLED`. If installing or upgrading via Helm you can enable the API Audit Logs and specify the log level by applying the following setting to your Helm command: `--set auditLog.enabled=true --set auditLog.level=0`. See the xref:observability/logging/enable-api-audit-log.adoc[Enabling the API Audit Log to Record System Events] documentation and https://github.com/rancher/rancher/issues/48941[#48941].
-endif::[]
+Rancher now has an enablement option called {rn-viewing-api-audit-logs}[`AUDIT_LOG_ENABLED`] for API Audit Logs for a Rancher installation. In Rancher versions 2.11.x and earlier, only the `AUDIT_LEVEL` could be set and the default log level (`0`) would disable the audit log. In Rancher versions 2.12.x and later, the default log level (`0`) now only contains the log request and response metadata, and can be set when configuring `AUDIT_LOG_ENABLED`. If installing or upgrading via Helm you can enable the API Audit Logs and specify the log level by applying the following setting to your Helm command: `--set auditLog.enabled=true --set auditLog.level=0`. See the {rn-enable-api-audit-log}[Enabling the API Audit Log to Record System Events] documentation and https://github.com/rancher/rancher/issues/48941[#48941].
 ====
 
 == Changes in Image Artifacts
@@ -177,12 +175,7 @@ Image artifact digests are renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up u
 
 == Upgrade Requirements
 
-ifeval::["{build-type}" == "community"]
-* *Creating backups:* https://ranchermanager.docs.rancher.com/v2.13/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
-endif::[]
-ifeval::["{build-type}" != "community"]
-* *Creating backups:* xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
-endif::[]
+* *Creating backups:* {rn-back-up-rancher}[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
 * *Helm version requirements:*
 ** To manage Rancher 2.12.x and later, you must upgrade your Helm client to version 3.18 or newer.
 ** This change is required to reflect the addition of Kubernetes 1.33 support with this release.
@@ -191,14 +184,8 @@ endif::[]
 ** For Kubernetes v1.19 and later, disable firewalld as it's incompatible with various CNI plugins. See https://github.com/rancher/rancher/issues/28840[#28840].
 ** When upgrading or installing a Linux distribution that uses nf_tables as the backend packet filter, such as SLES 15, RHEL 8, Ubuntu 20.10, Debian 10, or later, upgrade to RKE v1.19.2 or later to get Flannel v0.13.0. Flannel v0.13.0 supports nf_tables. See Flannel https://github.com/flannel-io/flannel/issues/1317[#1317].
 * *Requirements for air-gapped environments:*
-ifeval::["{build-type}" == "community"]
-** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the https://docs.ranchermanager.rancher.io/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
-** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the https://docs.k3s.io/installation/private-registry[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
-endif::[]
-ifeval::["{build-type}" != "community"]
-** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the https://documentation.suse.com/cloudnative/rancher-manager/v2.12/en/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.html[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
-** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the https://documentation.suse.com/cloudnative/k3s/latest/en/installation/private-registry.html[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
-endif::[]
+** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the {rn-install-rancher}[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
+** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the {rn-private-registry}[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
 
 == Versions
 
