Use attributes for links

--- a/versions/v2.11/modules/en/pages/release-notes/v2.11.10.adoc
+++ b/versions/v2.11/modules/en/pages/release-notes/v2.11.10.adoc
@@ -4,6 +4,19 @@ ifeval::["{build-type}" != "srfa"]
 endif::[]
 :revdate: 2026-01-19
 :page-revdate: {revdate}
+ifeval::["{build-type}" == "community"]
+:rn-component-version: v2.11
+:rn-installation-requirements: https://ranchermanager.docs.rancher.com/{rn-component-version}/getting-started/installation-and-upgrade/installation-requirements
+:rn-back-up-rancher: https://ranchermanager.docs.rancher.com/{rn-component-version}/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher
+:rn-install-rancher: https://docs.ranchermanager.rancher.io/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher
+:rn-private-registry: https://docs.k3s.io/installation/private-registry
+endif::[]
+ifeval::["{build-type}" != "community"]
+:rn-installation-requirements: xref:installation-and-upgrade/requirements/requirements.adoc
+:rn-back-up-rancher: xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
+:rn-install-rancher: xref:installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+:rn-private-registry: https://documentation.suse.com/cloudnative/k3s/latest/en/installation/private-registry.html
+endif::[]
 
 [IMPORTANT]
 ====
@@ -22,12 +35,7 @@ See the full list of https://github.com/rancher/rancher/compare/v2.11.9...v2.11.
 
 == Install/Upgrade Notes
 
-ifeval::["{build-type}" == "community"]
-If you're installing Rancher for the first time, your environment must fulfill the https://ranchermanager.docs.rancher.com/v2.11/getting-started/installation-and-upgrade/installation-requirements[installation requirements].
-endif::[]
-ifeval::["{build-type}" != "community"]
-If you're installing Rancher for the first time, your environment must fulfill the xref:installation-and-upgrade/requirements/requirements.adoc[installation requirements].
-endif::[]
+If you're installing Rancher for the first time, your environment must fulfill the {rn-installation-requirements}[installation requirements].
 
 == Changes in Image Artifacts
 
@@ -38,24 +46,13 @@ Image artifact digests were renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up 
 
 == Upgrade Requirements
 
-ifeval::["{build-type}" == "community"]
-* *Creating backups:* https://ranchermanager.docs.rancher.com/v2.11/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
-endif::[]
-ifeval::["{build-type}" != "community"]
-* *Creating backups:* xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
-endif::[]
+* *Creating backups:* {rn-back-up-rancher}[Create a backup] before you upgrade Rancher. To roll back Rancher after an upgrade, you must first back up and restore Rancher to the previous Rancher version. Because Rancher will be restored to the same state as when the backup was created, any changes post-upgrade will not be included after the restore.
 * *CNI requirements:*
 ** For Kubernetes v1.19 and later, disable firewalld as it's incompatible with various CNI plugins. See https://github.com/rancher/rancher/issues/28840[#28840].
 ** When upgrading or installing a Linux distribution that uses nf_tables as the backend packet filter, such as SLES 15, RHEL 8, Ubuntu 20.10, Debian 10, or later, upgrade to RKE v1.19.2 or later to get Flannel v0.13.0. Flannel v0.13.0 supports nf_tables. See Flannel https://github.com/flannel-io/flannel/issues/1317[#1317].
 * *Requirements for air-gapped environments:*
-ifeval::["{build-type}" == "community"]
-** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the https://docs.ranchermanager.rancher.io/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
-** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the https://docs.k3s.io/installation/private-registry[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
-endif::[]
-ifeval::["{build-type}" != "community"]
-** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the xref:installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
-** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the https://documentation.suse.com/cloudnative/k3s/latest/en/installation/private-registry.html[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
-endif::[]
+** When using a proxy in front of an air-gapped Rancher instance, you must pass additional parameters to `NO_PROXY`. See the {rn-install-rancher}[documentation] and issue https://github.com/rancher/docs/issues/2725#issuecomment-702454584[#2725].
+** When installing Rancher with Docker in an air-gapped environment, you must supply a custom `registries.yaml` file to the `docker run` command, as shown in the {rn-private-registry}[K3s documentation]. If the registry has certificates, then you'll also need to supply those. See https://github.com/rancher/rancher/issues/28969#issuecomment-694474229[#28969].
 
 == Versions
 
