--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-19
+:revdate: 2026-01-20
 :page-revdate: {revdate}
 ifeval::["{build-type}" == "community"]
 :rn-component-version: v2.13
@@ -30,12 +30,7 @@ endif::[]
 
 [IMPORTANT]
 ====
-Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. When upgrading Rancher instances to Rancher Prime v2.13.1 or higher, you may see failures with clusters utilizing the ingress-nginx ingress controller. Please refer to this https://support.scc.suse.com/s/kb/Upgrade-to-Rancher-Prime-v2-13-1-fails-in-clusters-with-ingress-nginx?language=en_US[knowledge base article] to resolve upgrade issues.
-
-Due to reported upgrade complications we are now dual-publishing the chart under both names in the same repository to allow a smoother transition.
-
-* We suggest continuing to use the `rancher` chart name for upgrades - users whom already upgraded should take no action at this time.
-* In the next release we will provide an improved migration path and provide clear guidance for all users.
+The chart name change introduced in Rancher Prime v2.13.1 has been reverted. The chart name `rancher` should be used for all installations and upgrades. As an example, the installation command is now `helm install rancher rancher-prime/rancher`.
 ====
 
 [IMPORTANT]
@@ -58,17 +53,9 @@ Rancher v2.13.2 is the latest patch release of Rancher. This is a Prime version 
 
 == What's New - SUSE Rancher Prime v2.13.2
 
-=== Rancher Prime Chart Name
+=== Rancher Prime Chart Name Reverted
 
-[IMPORTANT]
-====
-Due to reported upgrade complications we are now dual-publishing the chart under both names in the same repository to allow a smoother transition.
-
-* We suggest continuing to use the `rancher` chart name for upgrades - users whom already upgraded should take no action at this time.
-* In the next release we will provide an improved migration path and provide clear guidance for all users.
-====
-
-* Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher v2.13.1 or higher, the chart name you use will be `rancher-prime` instead. As an example the installation command is now `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repository.
+The chart name change introduced in Rancher Prime v2.13.1 has been reverted. The chart name `rancher` should be used for all installations and upgrades. As an example, the installation command is now `helm install rancher rancher-prime/rancher`.
 endif::[]
 
 //== Rancher General
@@ -131,12 +118,7 @@ ifeval::["{build-type}" != "community"]
 [IMPORTANT]
 .Chart Name Change for Rancher Prime
 ====
-Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher v2.13.1 or higher, the chart name you use will be `rancher-prime` instead, for example `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repository.
-
-Due to reported upgrade complications we are now dual-publishing the chart under both names in the same repository to allow a smoother transition.
-
-* We suggest continuing to use the `rancher` chart name for upgrades - users whom already upgraded should take no action at this time.
-* In the next release we will provide an improved migration path and provide clear guidance for all users.
+The chart name change introduced in Rancher Prime v2.13.1 has been reverted. The chart name `rancher` should be used for all installations and upgrades. As an example, the installation command is now `helm install rancher rancher-prime/rancher`.
 ====
 endif::[]
 
