Update SUSE Rancher Prime Security Guides page

--- a/versions/v2.12/modules/en/pages/security/security-overview.adoc
+++ b/versions/v2.12/modules/en/pages/security/security-overview.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-22
+:revdate: 2026-01-20
 :page-revdate: {revdate}
 
 [pass]
@@ -41,9 +41,7 @@ For details, refer to the section on xref:security/compliance-scans/how-to.adoc[
 
 == SELinux RPM
 
-https://en.wikipedia.org/wiki/Security-Enhanced_Linux[Security-Enhanced Linux (SELinux)] is a security enhancement to Linux. After being historically used by government agencies, SELinux is now industry standard and is enabled by default on CentOS 7 and 8.
-
-We provide two RPMs (Red Hat packages) that enable Rancher products to function properly on SELinux-enforcing hosts: `rancher-selinux` and `rke2-selinux`. For details, see xref:security/selinux-rpm/selinux-rpm.adoc[this page].
+We provide three RPMs (RPM Package Manager) that enable Rancher products to function properly on SELinux-enforcing hosts: `rancher-selinux`, `rke2-selinux` and `k3s-selinux`.  For details, see xref:security/selinux-rpm/selinux-rpm.adoc[this page].
 
 == Rancher Hardening Guide
 
