--- a/versions/v2.12/modules/zh/pages/security/security-overview.adoc
+++ b/versions/v2.12/modules/zh/pages/security/security-overview.adoc
@@ -1,6 +1,6 @@
 = 安全
 :page-languages: [en, zh]
-:revdate: 2025-08-22
+:revdate: 2026-01-20
 :page-revdate: {revdate}
 
 [pass]
@@ -39,9 +39,7 @@ When Rancher runs a Compliance scan on a cluster, it generates a report showing 
 
 == SELinux RPM
 
-https://en.wikipedia.org/wiki/Security-Enhanced_Linux[安全增强型 Linux (SELinux)] 是对 Linux 的安全增强。被政府机构使用之后，SELinux 已成为行业标准，并在 CentOS 7 和 8 上默认启用。
-
-我们提供了 `rancher-selinux` 和 `rke2-selinux` 两个 RPM（Red Hat 软件包），让 Rancher 产品能够在 SELinux 主机上正常运行。有关详细信息，请参阅xref:security/selinux-rpm/selinux-rpm.adoc[此页面]。
+We provide three RPMs (RPM Package Manager) that enable Rancher products to function properly on SELinux-enforcing hosts: `rancher-selinux`, `rke2-selinux` and `k3s-selinux`.  For details, see xref:security/selinux-rpm/selinux-rpm.adoc[this page].
 
 == Rancher 加固指南
 
