--- a/versions/v2.13/modules/en/nav.adoc
+++ b/versions/v2.13/modules/en/nav.adoc
@@ -311,6 +311,7 @@ endif::[]
 *** xref:security/selinux-rpm/about-rancher-selinux.adoc[]
 **** xref:security/selinux-rpm/selinux-rpm.adoc[]
 *** xref:security/selinux-rpm/about-rke2-selinux.adoc[]
+*** xref:security/selinux-rpm/about-k3s-selinux.adoc[]
 ** xref:security/compliance-scans/compliance-scans.adoc[]
 *** xref:security/compliance-scans/rbac-for-compliance-scans.adoc[]
 *** xref:security/compliance-scans/how-to.adoc[]
