Update About rancher-selinux page

--- a/versions/v2.12/modules/zh/pages/security/selinux-rpm/about-rancher-selinux.adoc
+++ b/versions/v2.12/modules/zh/pages/security/selinux-rpm/about-rancher-selinux.adoc
@@ -1,6 +1,6 @@
 = 关于 rancher-selinux
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2026-01-20
 :page-revdate: {revdate}
 
 要让 Rancher 使用 SELinux，你必须手动为 SELinux 节点启用一些功能。为了解决这个问题，Rancher 提供了一个 SELinux RPM。
@@ -14,27 +14,12 @@ The `rancher-selinux` RPM contains a set of SELinux policies designed to grant t
 [NOTE]
 .要求
 ====
-
-rancher-selinux RPM 已在 CentOS 7 和 8 上进行了测试。
+The `rancher-selinux` RPM was tested on openSUSE Tumbleweed and RHEL-based distributions including Centos/RockyLinux 8 and 9.
 ====
-
 
 === 1. 设置 yum 仓库
 
 设置 yum 仓库，从而直接在集群中的所有主机上安装 `rancher-selinux`。
-
-要使用 RPM 仓库，在 CentOS 7 或 RHEL 7 系统上运行以下 bash 代码片段：
-
-----
-# cat << EOF > /etc/yum.repos.d/rancher.repo
-[rancher]
-name=Rancher
-baseurl=https://rpm.rancher.io/rancher/production/centos/7/noarch
-enabled=1
-gpgcheck=1
-gpgkey=https://rpm.rancher.io/public.key
-EOF
-----
 
 要使用 RPM 仓库，在 CentOS 8 或 RHEL 8 系统上运行以下 bash 代码片段：
 
@@ -57,16 +42,14 @@ EOF
 yum -y install rancher-selinux
 ----
 
-== 配置 Logging 应用程序以使用 SELinux
+== Configuring the Logging and Monitoring Applications to Work with SELinux
 
 [NOTE]
 .要求
 ====
-
-Logging v2 已在 RHEL/CentOS 7 和 8 上使用 SELinux 进行了测试。
+Logging v2 and Monitoring v2 were tested with SELinux on RHEL/CentOS 8, 9, and Tumbleweed.
 ====
-
 
 在主机上安装 `rancher-selinux` RPM 后，应用程序不会自动运行。它们需要在 RPM 提供的允许的 SELinux 容器域中运行。
 
-要将 `rancher-logging` Chart 配置为支持 SELinux，请在安装 Chart 时将 `values.yaml` 中的 `global.seLinux.enabled` 更改为 true。
+To configure the `rancher-logging` or the `rancher-monitoring` chart to be SELinux aware, change `global.seLinux.enabled` to true in the `values.yaml` when installing the charts.
