--- a/versions/v2.13/modules/zh/pages/security/selinux-rpm/selinux-rpm.adoc
+++ b/versions/v2.13/modules/zh/pages/security/selinux-rpm/selinux-rpm.adoc
@@ -1,17 +1,21 @@
 = SELinux RPM
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2026-01-20
 :page-revdate: {revdate}
 
 https://en.wikipedia.org/wiki/Security-Enhanced_Linux[安全增强型 Linux (SELinux)] 是对 Linux 的安全增强。
 
 它由 Red Hat 开发，是 Linux 上 MAC（mandatory access controls，强制访问控制）的实现。系统管理员可以使用 MAC 设置应用程序和用户是如何访问不同资源的，例如文件、设备、网络和进程间的通信。SELinux 还通过默认限制操作系统来增强安全性。
 
-被政府机构使用之后，SELinux 已成为行业标准，并在 CentOS 7 和 8 上默认启用。要检查 SELinux 是否在你的系统上启用和执行，请使用 `getenforce`：
+After being historically used by government agencies, SELinux is now an industry standard and enabled by default on SUSE distributions such as SUSE Linux Enterprise 16, openSUSE distributions such as openSUSE Tumbleweed, and RHEL-based OS such as Rocky Linux. To check whether SELinux is enabled and enforced on your system, use `getenforce`:
 
 ----
 # getenforce
 Enforcing
 ----
 
-我们提供了 xref:security/selinux-rpm/about-rancher-selinux.adoc[`rancher-selinux`] 和 xref:security/selinux-rpm/about-rke2-selinux.adoc[`rke2-selinux`] 两个 RPM（Red Hat 软件包），让 Rancher 产品能够在 SELinux 主机上正常运行。
+We provide three RPMs (RPM Package Manager) that enable Rancher products to function properly on SELinux-enforcing hosts:
+
+* xref:security/selinux-rpm/about-rancher-selinux.adoc[`rancher-selinux`]
+* xref:security/selinux-rpm/about-rke2-selinux.adoc[`rke2-selinux`]
+* xref:security/selinux-rpm/about-k3s-selinux.adoc[`k3s-selinux`]
