Updating v2.13 FAQ page instructions with v2.13.1 rancher-prime label/container name.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.13/modules/zh/pages/faq/technical-items.adoc
+++ b/versions/v2.13/modules/zh/pages/faq/technical-items.adoc
@@ -1,6 +1,6 @@
 = 技术
 :page-languages: [en, zh]
-:revdate: 2025-08-18
+:revdate: 2026-01-20
 :page-revdate: {revdate}
 
 == 如何重置管理员密码？
@@ -18,6 +18,13 @@ Kubernetes 安装（Helm）：
  New password for default administrator (user-xxxxx):
  <new_password>
 
+Kubernetes 安装 (Helm - *Applicable to Rancher Prime v2.13.1*):
+
+ $ KUBECONFIG=./kube_config_cluster.yml
+ $ kubectl --kubeconfig $KUBECONFIG -n cattle-system exec $(kubectl --kubeconfig $KUBECONFIG -n cattle-system get pods -l app=rancher-prime --no-headers | head -1 | awk '{ print $1 }') -c rancher-prime -- reset-password
+ New password for default administrator (user-xxxxx):
+ <new_password>
+
 == 我删除/停用了最后一个 admin，该如何解决？
 
 Docker 安装：
@@ -31,6 +38,13 @@ Kubernetes 安装（Helm）：
 
  $ KUBECONFIG=./kube_config_cluster.yml
  $ kubectl --kubeconfig $KUBECONFIG -n cattle-system exec $(kubectl --kubeconfig $KUBECONFIG -n cattle-system get pods -l app=rancher | grep '1/1' | head -1 | awk '{ print $1 }') -- ensure-default-admin
+ New password for default administrator (user-xxxxx):
+ <new_password>
+
+Kubernetes 安装（Helm - - *Applicable to Rancher Prime v2.13.1*）：
+
+ $ KUBECONFIG=./kube_config_cluster.yml
+ $ kubectl --kubeconfig $KUBECONFIG -n cattle-system exec $(kubectl --kubeconfig $KUBECONFIG -n cattle-system get pods -l app=rancher-prime | grep '1/1' | head -1 | awk '{ print $1 }') -- ensure-default-admin
  New password for default administrator (user-xxxxx):
  <new_password>
 
